[package]
name = "ludus_web"
version = "0.1.0"
author = "Lúcás C. Meier"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ludus = "0.2.2"
wasm-bindgen = "0.2.75"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioDestinationNode',
  'AudioNode',
  'AudioContext',
  'ImageData',
  'CanvasRenderingContext2d',
]
